# CASAL2

./: .gitignore  README.md  azure-pipelines-linux.yml  azure-pipelines-windows-mingw.yml  azure-pipelines.yml
BuildSystem/: CMakeLists.txt  build.py
BuildSystem/buildtools/classes/: Builder.py  Documentation.py  Globals.py  System.py  Version.py
CASAL2/source/: License.h  Runner.cpp  Runner.h  SharedLibrary.cpp  Version.h  main.cpp
CASAL2/source/AdditionalPriors/: AdditionalPrior.cpp  AdditionalPrior.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h
CASAL2/source/AgeLengths/: AgeLength.Test.cpp  AgeLength.cpp  AgeLength.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h
CASAL2/source/AgeWeights/: AgeWeight.cpp  AgeWeight.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h
CASAL2/source/AgeingErrors/: AgeingError.cpp  AgeingError.h  Factory.cpp  Factory.h  Manager.h
CASAL2/source/Asserts/: Assert.cpp  Assert.h  Factory.cpp  Factory.h  Manager.h
CASAL2/source/BaseClasses/: Executor.h  Manager-inl.h  Manager.h  Object.Test.cpp  Object.cpp  Object.h
CASAL2/source/Catchabilities/: Catchability.cpp  Catchability.h  Factory.cpp  Factory.h  Manager.h
CASAL2/source/Categories/: Categories.Test.cpp  Categories.cpp  Categories.h
CASAL2/source/ConfigurationLoader/: EstimableValuesLoader.cpp  EstimableValuesLoader.h  File.cpp  File.h  Loader.Test.cpp  Loader.cpp  Loader.h  MCMCObjective.cpp  MCMCObjective.h  MCMCSample.cpp  MCMCSample.h  MPD.cpp  MPD.h
CASAL2/source/DerivedQuantities/: DerivedQuantity.cpp  DerivedQuantity.h  Factory.cpp  Factory.h  Manager.h
CASAL2/source/EquationParser/: EquationParser.cpp  EquationParser.h
CASAL2/source/Estimables/: Estimables.cpp  Estimables.h
CASAL2/source/EstimateTransformations/: EstimateTransformation.cpp  EstimateTransformation.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h
CASAL2/source/Estimates/: Estimate.Test.cpp  Estimate.cpp  Estimate.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h
CASAL2/source/GlobalConfiguration/: GlobalConfiguration.cpp  GlobalConfiguration.h
CASAL2/source/InitialisationPhases/: Factory.cpp  Factory.h  InitialisationPhase.cpp  InitialisationPhase.h  Manager.cpp  Manager.h
CASAL2/source/LengthWeights/: Factory.cpp  Factory.h  LengthWeight.cpp  LengthWeight.h
CASAL2/source/Likelihoods/: Factory.cpp  Factory.h  Likelihood.cpp  Likelihood.h  Manager.cpp  Manager.h
CASAL2/source/Logging/: Logging.cpp  Logging.h
CASAL2/source/MCMCs/: Factory.cpp  Factory.h  MCMC.cpp  MCMC.h  Manager.cpp  Manager.h
CASAL2/source/Minimisers/: Factory.cpp  Factory.h  Manager.cpp  Manager.h  Minimiser.cpp  Minimiser.h
CASAL2/source/Model/: Factory.cpp  Factory.h  Managers.cpp  Managers.h  Model.Test.cpp  Model.cpp  Model.h  Objects.Mock.h  Objects.Test.cpp  Objects.cpp  Objects.h
CASAL2/source/ObjectiveFunction/: ObjectiveFunction.cpp  ObjectiveFunction.h
CASAL2/source/Observations/: Comparison.h  Factory.cpp  Factory.h  Manager.h  Observation.cpp  Observation.h
CASAL2/source/ParameterList/: Parameter-inl.h  Parameter.cpp  Parameter.h  ParameterList-inl.h  ParameterList.cpp  ParameterList.h  Table-inl.h  Table.Test.cpp  Table.cpp  Table.h
CASAL2/source/Partition/: Accessor.h  Category.Test.cpp  Category.cpp  Category.h  Partition.Test.cpp  Partition.cpp  Partition.h
CASAL2/source/Penalties/: Factory.cpp  Factory.h  Manager.cpp  Manager.h  Penalty.cpp  Penalty.h
CASAL2/source/Processes/: Factory.cpp  Factory.h  Manager.cpp  Manager.h  Process.cpp  Process.h
CASAL2/source/Profiles/: Factory.cpp  Factory.h  Manager.h  Profile.cpp  Profile.h
CASAL2/source/Projects/: Factory.cpp  (+6 more)
CASAL2/testcases/: .gitignore  configuration_loader.Test.1
Documentation/UserManual/: CASAL2.syn  QuickReference.tex  Version.tex
TestModels/Complex_input/: Reports.csl2
TestModels/SBW/: Estimation.csl2
TestModels/TwoSex_input/: estimation.csl2
(+655 files in other folders)
